2001-04-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history): Change the format on display.

2001-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-om.el (w3m-icon-directory): Define it as the constant nil
	to avoid byte-compile warnings when compiling.
	* w3m.el (w3m-icon-directory): Undo last change.

2001-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-icon-directory): Hide the actual function name
	`locate-data-directory' for old Emacsen to avoid byte-compile
	warnings.

	* w3m-om.el (w3m-om-define-missing-widgets): New function.
	(TopLevel): Use it for defining some missing widgets after the
	library wid-edit is loaded.

2001-04-12  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-index-url): Removed method definition.

	* shimbun/sb-fml.el (shimbun-index-url): Define.

	* shimbun/sb-asahi-html.el (shimbun-asahi-html-content-end):
	Changed value.
	(shimbun-index-url): Removed.

2001-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-xmas-define-missing-widgets): New function.
	(TopLevel): Use it for defining some missing widgets after the
	library wid-edit is loaded.

	* w3m.el (w3m-track-mouse): Added a description about balloon-help.
	(w3m-make-balloon-help): New macro.
	(w3m-fontify-anchors, w3m-fontify-images): Use it.

2001-04-12  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-headers): Define as generic function.

	* shimbun/sb-wired.el (shimbun-get-group-header-alist): Don't return
	headers with duplicated message-id.

	* shimbun/sb-lump.el (shimbun-lump-check-p): Revert the checking logic.
	(shimbun-headers): Renamed from shimbun-get-headers.

2001-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-track-mouse): Default to t.
	(w3m-make-help-echo): New macro.
	(w3m-fontify-anchors, w3m-fontify-images): Use it.

2001-04-12  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi-html.el: New file.

2001-04-12  Hideyuki SHIRAI  <shirai@meadowy.org>